catalog/rabbitmq/kubernetes/rabbitmq-discovery-service.yaml
# Ensures individual StatefulSet get their own DNS entries (e.g. rabbitmq-0.rabbitmq.namespace.svc.cluster.local)
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  labels:
    app: message-bus
    component: rabbitmq
    role: discovery
    release: stable      # stable, canary, alpha, beta, experimental, latest, debug
    environment: dev     # dev, staging, qa, production
    partition: all       # customer_1, customer_2, developer_1, beta_release
spec:
  clusterIP: None
  ports:
  - port: 4369
    name: epmd
  - port: 25672
    name: discovery
  selector:
    app: message-bus
    component: rabbitmq
