catalog/rabbitmq/kubernetes/rabbitmq-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rabbitmq
    component: rabbitmq
    role: message-bus
    release: stable      # canary
    environment: staging # dev, qa, production
    tier: message-bus    # frontend, backend, cache
    partition: all       # customer_1, customer_2, developer_1, beta_release
  name: rabbitmq-headless
spec:
  clusterIP: None
  ports:
  - port: 4369
    name: epmd
  - port: 25672
    name: discovery
  selector:
    app: rabbitmq
    component: rabbitmq
