catalog/rabbitmq/kubernetes/rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rabbitmq
    component: rabbitmq
    role: message-bus
    release: stable      # canary
    environment: staging # dev, qa, production
    tier: message-bus    # frontend, backend, cache
    partition: all       # customer_1, customer_2, developer_1, beta_release
  name: rabbitmq
spec:
  clusterIP: None
  ports:
  - port: 5672
    name: data
  - port: 15672
    name: web
  selector:
    app: rabbitmq
    component: rabbitmq
